header created, header swiper added

--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,44 @@
     <body>
         <header>
             <nav>
-                <h1>Nowe BMW iX</h1>
-                <h1>Umów jazdę próbną</h1>  
+                <div class='nav-left'>
+                    <div class="nav-left-top">
+                        <a class='nav-link' href=''>Nowe BMW iX</a>
+                        <a class='nav-link' href=''>Umów jazdę próbną</a>
+                    </div>  
+                    <div class="nav-left-bottom">
+                        <h4>Radość z jazdy</h4>
+                    </div>
+                </div>
+                <div class='nav-right'>
+                    <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
+                </div>
             </nav>
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <h1>Nowe BMW iX</h1>
+                        <div class="swiper-slide-left">
+                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                            <h1>NOWE BMW iX</h1>
+                            <h4>PIONIER NOWEJ ERY</h4>
+                        </div>
+                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                     </div>
                     <div class="swiper-slide">
-                        <h1>Nowe BMW iX</h1>
+                        <div>
+                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                            <h1>NOWE BMW iX</h1>
+                            <h4>WYBRÓBUJ!</h1>
+                        </div>
+                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                     </div>
                     <div class="swiper-slide">
-                        <h1>Nowe BMW iX</h1>
+                        <div>
+                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                            <h1>NOWE BMW iX</h1>
+                            <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ</h4>
+                        </div>
+                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -38,6 +63,7 @@
         <footer>
 
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script src="../src/index.js"></script>
     </body>
 </html> 
