--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <title>BMW</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
         <link rel="stylesheet" href="../src/style.css" />
     </head>
@@ -58,7 +58,54 @@
             </div>
         </header>
         <main>
+            <section class="facts-section">
+                <img class="bmw-info-img1" src="./images/info1.png" alt="bmw-car-front">
+                <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
+                <div class="bmw-info-box">
+                    <h2 class="bmw-info-box-title">
+                        <span>FAKTY</span><br>
+                        <span>O NOWYM BMW iX.</span></h2>
+                    <div class="bmw-info-box-fact">
+                        <p class="bmw-info-box-id">01</p>
+                        <p class="bmw-info-box-text">Ponad 600km zasięgu *</p>
+                    </div>
+                    <div class="bmw-info-box-fact">
+                        <p class="bmw-info-box-id">02</p>
+                        <p class="bmw-info-box-text">Elektryczny napęd na wszystkie koła z dwiema osiami napędzanymi elektrycznie i ponad 500 KM (370 kW) *</p>
+                    </div>
+                    <div class="bmw-info-box-fact">
+                        <p class="bmw-info-box-id">03</p>
+                        <p class="bmw-info-box-text">Od 0 do 100 km / hw mniej niż 5 sekund *</p>
+                    </div>
+                    <div class="bmw-info-box-fact">
+                        <p class="bmw-info-box-id">04</p>
+                        <p class="bmw-info-box-text">Ładowanie 120 km w 10 minut *</p>
+                    </div>
+                    <div class="bmw-info-box-fact">
+                        <p class="bmw-info-box-id">05</p>
+                        <p class="bmw-info-box-text">Publiczne szybkie ładowanie od 10 do 80% w mniej niż 40 minut*</p>
+                    </div>
+                </div>
+            </section>
+            <section class="innovation-section">
+                <div class="innovation-textarea">
+                    <h2 class="innovation-textarea-title">
+                        <span>INNOWACYJNA</span><br>
+                        <span>AERODYNAMIKA</span><br>
+                        <span>BMW iX.</span>
+                    </h2>
+                    <p class="subtitle">BMW iX w każdym milimetrze swojej dynamicznej stylistyki wdraża zasadę „forma podąża za funkcją”.</p>
+                    <p class="textarea">Widać to przede wszystkim po gładkiej karoserii ze zwężoną nadbudową kabiny i zredukowanymi fugami oraz po płaskim podwoziu. W połączeniu z zamkniętym przodem oraz dyfuzorem z tyłu i niezwykłymi detalami, takimi jak wpuszczane klamki czy zintegrowane z listwami szybowymi lusterka zewnętrzne, BMW iX osiąga doskonały współczynnik Cx wynoszący zaledwie 0,25. Dzięki temu łączy w sobie zasięg i wydajność z innowacyjną konstrukcją SAV-a.</p>
+                </div>
+                <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
+                <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
+            </section>
+            <section class="img-section">
 
+            </section>
+            <section class="form-section">
+
+            </section>
         </main>
         <footer>
 
