gallery section created

--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,8 @@
                 <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
                 <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
             </section>
-            <section class="img-section">
-
+            <section class="gallery-section">
+                <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
             </section>
             <section class="form-section">
 
