--- a/public/index.html
+++ b/public/index.html
@@ -13,157 +13,164 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
         <link rel="stylesheet" href="../src/style.css" />
-    </head>
+    </head> 
     <body>
-        <header>
-            <nav class="header-nav">
-                <div class='nav-left'>
-                    <div class="nav-left-top">
-                        <a class='nav-link' href=''>Nowe BMW iX</a>
-                        <a class='nav-link' href='#form'>Umów jazdę próbną</a>
-                    </div>  
-                    <div class="nav-left-bottom">
-                        <h4>Radość z jazdy</h4>
-                    </div>
-                </div>
-                <div class='nav-right'>
-                    <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
-                </div>
-            </nav>
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="swiper-slide-left">
-                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
-                            <h1>NOWE BMW iX</h1>
-                            <h4>PIONIER NOWEJ ERY</h4>
-                        </div>
-                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="swiper-slide-left">
-                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
-                            <h1>NOWE BMW iX</h1>
-                            <h4>WYBRÓBUJ!</h1>
-                        </div>
-                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="swiper-slide-left">
-                            <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
-                            <h1>NOWE BMW iX</h1>
-                            <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ</h4>
-                        </div>
-                        <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
-                    </div>
-                </div>
-                <div class="swiper-pagination"></div>
+        <div class="overlay">
+            <div class="form-overlay">
+                <p class="form-overlay-title">DZIĘKUJEMY</p>
+                <p class="form-overlay-note">Skontaktujemy się z Tobą w najbliższym możliwym terminie.</p>
+                <button class="ok-btn">OK</button>
             </div>
-        </header>
-        <main>
-            <section class="facts-section">
-                <img class="bmw-info-img1" src="./images/info1.png" alt="bmw-car-front">
-                <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
-                <div class="bmw-info-box">
-                    <h2 class="bmw-info-box-title">
-                        <span>FAKTY</span><br>
-                        <span>O NOWYM BMW iX.</span></h2>
-                    <div class="bmw-info-box-fact">
-                        <p class="bmw-info-box-id">01</p>
-                        <p class="bmw-info-box-text">Ponad 600km zasięgu *</p>
-                    </div>
-                    <div class="bmw-info-box-fact">
-                        <p class="bmw-info-box-id">02</p>
-                        <p class="bmw-info-box-text">Elektryczny napęd na wszystkie koła z dwiema osiami napędzanymi elektrycznie i ponad 500 KM (370 kW) *</p>
-                    </div>
-                    <div class="bmw-info-box-fact">
-                        <p class="bmw-info-box-id">03</p>
-                        <p class="bmw-info-box-text">Od 0 do 100 km / hw mniej niż 5 sekund *</p>
-                    </div>
-                    <div class="bmw-info-box-fact">
-                        <p class="bmw-info-box-id">04</p>
-                        <p class="bmw-info-box-text">Ładowanie 120 km w 10 minut *</p>
-                    </div>
-                    <div class="bmw-info-box-fact">
-                        <p class="bmw-info-box-id">05</p>
-                        <p class="bmw-info-box-text">Publiczne szybkie ładowanie od 10 do 80% w mniej niż 40 minut*</p>
-                    </div>
-                </div>
-            </section>
-            <section class="innovation-section">
-                <div class="innovation-textarea">
-                    <h2 class="innovation-textarea-title">
-                        <span>INNOWACYJNA</span><br>
-                        <span>AERODYNAMIKA</span><br>
-                        <span>BMW iX.</span>
-                    </h2>
-                    <p class="subtitle">BMW iX w każdym milimetrze swojej dynamicznej stylistyki wdraża zasadę „forma podąża za funkcją”.</p>
-                    <p class="textarea">Widać to przede wszystkim po gładkiej karoserii ze zwężoną nadbudową kabiny i zredukowanymi fugami oraz po płaskim podwoziu. W połączeniu z zamkniętym przodem oraz dyfuzorem z tyłu i niezwykłymi detalami, takimi jak wpuszczane klamki czy zintegrowane z listwami szybowymi lusterka zewnętrzne, BMW iX osiąga doskonały współczynnik Cx wynoszący zaledwie 0,25. Dzięki temu łączy w sobie zasięg i wydajność z innowacyjną konstrukcją SAV-a.</p>
-                </div>
-                <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
-                <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
-            </section>
-            <section class="gallery-section">
-                <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
-            </section>
-            <section class="form-section">
-                <div class="form-container">
-                    <h2>UMÓW JAZDĘ PRÓBNĄ</h2>
-                    <p class="subtitle">Zachęcamy do ograniczenia poruszania się i pozostania w domu.</p>
-                    <p class="subtitle">Jeśli jednak jazda testowa okaże się niezbędna prosimy o wypełnienie poniższego formularza.</p>
-                    <form id="form">
-                        <p class="form-title">Wypełnij formularz swoimi danymi.</p>
-                        <input class="input-radio" type="radio" name="pan" value="Pan">
-                        <label for="html">Pan</label>
-                        <input class="input-radio" type="radio" name="pani" value="Pani">
-                        <label for="html">Pani</label><br>
-                        <input class="input-text" type="text" name="name" placeholder="Imię*" required><br>
-                        <input class="input-text" type="text" name="name" placeholder="Nazwisko*" required><br>
-                        <input class="input-text" type="email" name="name" placeholder="E-mail*" required><br>
-                        <input class="input-text" type="number" name="name" placeholder="Numer telefonu*" required><br>
-                        <button class="submit-btn">WYŚLIJ</button>
-                    </form>
-                </div>
-                
-            </section>
-        </main>
-        <footer>
-            <nav class="footer-nav">
-                <p>Dołącz do nas</p>
-                <div>
-                    <a href=""><img class='social-icon' src="images/facebook.png" alt="facebook-logo"></a>
-                    <a href=""><img class='social-icon' src="images/instagram.png" alt="facebook-logo"></a>
-                    <a href=""><img class='social-icon' src="images/youtube.png" alt="youtube-logo"></a>
-                    <a href=""><img class='social-icon' src="images/linkedin.png" alt="linkedin-logo"></a>
-                    <a href=""><img class='social-icon' src="images/twitter.png" alt="twitter-logo"></a>
-                </div>
-            </nav>
-            <div class="site-map">
-                <div class="site-map-client-zone">
-                    <p class="subtitle">Strefa klienta</p>
-                    <a class="site-map-link">Centrum Obsługi Klienta BMW</a>
-                    <a class="site-map-link">Znajdź dealera BMW</a>
-                    <a class="site-map-link">Pobierz cenniki/broszury</a>
-                    <a class="site-map-link">Często zadawane pytania</a>
-                </div>
-                <div class="site-map-meet-BMW">
-                    <p class="subtitle">Poznaj BMW</p>
-                    <a class="site-map-link">Informacje prasowe</a>
-                    <a class="site-map-link">BMW Polska</a>
-                    <a class="site-map-link">Kariera</a>
-                </div>
-                <div class="site-map-legal-info">
-                    <p class="subtitle">Informacje prawne</p>
-                    <a class="site-map-link">Mapa serwisu</a>
-                    <a class="site-map-link">Nota prawna / prywatność</a>
-                    <a class="site-map-link">Polityka cookie</a>
-                    <a class="site-map-link">Warunki korzystania z MyBMW</a>
-                </div>
-            </div>
-        </footer>
-        <div class="watermark">
-            <p>© BMW Polska 2020</p>
         </div>
+            <header>
+                <nav class="header-nav">
+                    <div class='nav-left'>
+                        <div class="nav-left-top">
+                            <a class='nav-link' href=''>Nowe BMW iX</a>
+                            <a class='nav-link' href='#form'>Umów jazdę próbną</a>
+                        </div>  
+                        <div class="nav-left-bottom">
+                            <h4>Radość z jazdy</h4>
+                        </div>
+                    </div>
+                    <div class='nav-right'>
+                        <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
+                    </div>
+                </nav>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper-slide-left">
+                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                <h1>NOWE BMW iX</h1>
+                                <h4>PIONIER NOWEJ ERY</h4>
+                            </div>
+                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide-left">
+                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                <h1>NOWE BMW iX</h1>
+                                <h4>WYBRÓBUJ!</h1>
+                            </div>
+                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide-left">
+                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                <h1>NOWE BMW iX</h1>
+                                <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ</h4>
+                            </div>
+                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </header>
+            <main>
+                <section class="facts-section">
+                    <img class="bmw-info-img1" src="./images/info1.png" alt="bmw-car-front">
+                    <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
+                    <div class="bmw-info-box">
+                        <h2 class="bmw-info-box-title">
+                            <span>FAKTY</span><br>
+                            <span>O NOWYM BMW iX.</span></h2>
+                        <div class="bmw-info-box-fact">
+                            <p class="bmw-info-box-id">01</p>
+                            <p class="bmw-info-box-text">Ponad 600km zasięgu *</p>
+                        </div>
+                        <div class="bmw-info-box-fact">
+                            <p class="bmw-info-box-id">02</p>
+                            <p class="bmw-info-box-text">Elektryczny napęd na wszystkie koła z dwiema osiami napędzanymi elektrycznie i ponad 500 KM (370 kW) *</p>
+                        </div>
+                        <div class="bmw-info-box-fact">
+                            <p class="bmw-info-box-id">03</p>
+                            <p class="bmw-info-box-text">Od 0 do 100 km / hw mniej niż 5 sekund *</p>
+                        </div>
+                        <div class="bmw-info-box-fact">
+                            <p class="bmw-info-box-id">04</p>
+                            <p class="bmw-info-box-text">Ładowanie 120 km w 10 minut *</p>
+                        </div>
+                        <div class="bmw-info-box-fact">
+                            <p class="bmw-info-box-id">05</p>
+                            <p class="bmw-info-box-text">Publiczne szybkie ładowanie od 10 do 80% w mniej niż 40 minut*</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="innovation-section">
+                    <div class="innovation-textarea">
+                        <h2 class="innovation-textarea-title">
+                            <span>INNOWACYJNA</span><br>
+                            <span>AERODYNAMIKA</span><br>
+                            <span>BMW iX.</span>
+                        </h2>
+                        <p class="subtitle">BMW iX w każdym milimetrze swojej dynamicznej stylistyki wdraża zasadę „forma podąża za funkcją”.</p>
+                        <p class="textarea">Widać to przede wszystkim po gładkiej karoserii ze zwężoną nadbudową kabiny i zredukowanymi fugami oraz po płaskim podwoziu. W połączeniu z zamkniętym przodem oraz dyfuzorem z tyłu i niezwykłymi detalami, takimi jak wpuszczane klamki czy zintegrowane z listwami szybowymi lusterka zewnętrzne, BMW iX osiąga doskonały współczynnik Cx wynoszący zaledwie 0,25. Dzięki temu łączy w sobie zasięg i wydajność z innowacyjną konstrukcją SAV-a.</p>
+                    </div>
+                    <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
+                    <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
+                </section>
+                <section class="gallery-section">
+                    <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
+                </section>
+                <section class="form-section">
+                    <div class="form-container">
+                        <h2>UMÓW JAZDĘ PRÓBNĄ</h2>
+                        <p class="subtitle">Zachęcamy do ograniczenia poruszania się i pozostania w domu.</p>
+                        <p class="subtitle">Jeśli jednak jazda testowa okaże się niezbędna prosimy o wypełnienie poniższego formularza.</p>
+                        <form id="form">
+                            <p class="form-title">Wypełnij formularz swoimi danymi.</p>
+                            <input class="input-radio" type="radio" name="pan" value="Pan">
+                            <label for="html">Pan</label>
+                            <input class="input-radio" type="radio" name="pani" value="Pani">
+                            <label for="html">Pani</label><br>
+                            <input class="input-text" type="text" name="name" placeholder="Imię*" required><br>
+                            <input class="input-text" type="text" name="name" placeholder="Nazwisko*" required><br>
+                            <input class="input-text" type="email" name="name" placeholder="E-mail*" required><br>
+                            <input class="input-text" type="tel" name="name" placeholder="Numer telefonu*" required><br>
+                            <button class="submit-btn">WYŚLIJ</button>
+                        </form>
+                    </div>
+                    
+                </section>
+            </main>
+            <footer>
+                <nav class="footer-nav">
+                    <p>Dołącz do nas</p>
+                    <div>
+                        <a href=""><img class='social-icon' src="images/facebook.png" alt="facebook-logo"></a>
+                        <a href=""><img class='social-icon' src="images/instagram.png" alt="facebook-logo"></a>
+                        <a href=""><img class='social-icon' src="images/youtube.png" alt="youtube-logo"></a>
+                        <a href=""><img class='social-icon' src="images/linkedin.png" alt="linkedin-logo"></a>
+                        <a href=""><img class='social-icon' src="images/twitter.png" alt="twitter-logo"></a>
+                    </div>
+                </nav>
+                <div class="site-map">
+                    <div class="site-map-client-zone">
+                        <p class="subtitle">Strefa klienta</p>
+                        <a class="site-map-link">Centrum Obsługi Klienta BMW</a>
+                        <a class="site-map-link">Znajdź dealera BMW</a>
+                        <a class="site-map-link">Pobierz cenniki/broszury</a>
+                        <a class="site-map-link">Często zadawane pytania</a>
+                    </div>
+                    <div class="site-map-meet-BMW">
+                        <p class="subtitle">Poznaj BMW</p>
+                        <a class="site-map-link">Informacje prasowe</a>
+                        <a class="site-map-link">BMW Polska</a>
+                        <a class="site-map-link">Kariera</a>
+                    </div>
+                    <div class="site-map-legal-info">
+                        <p class="subtitle">Informacje prawne</p>
+                        <a class="site-map-link">Mapa serwisu</a>
+                        <a class="site-map-link">Nota prawna / prywatność</a>
+                        <a class="site-map-link">Polityka cookie</a>
+                        <a class="site-map-link">Warunki korzystania z MyBMW</a>
+                    </div>
+                </div>
+            </footer>
+            <div class="watermark">
+                <p>© BMW Polska 2020</p>
+            </div>
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script src="../src/index.js"></script>
     </body>
