background image created for form-sections. smooth scrolling to anchor tags added, animation on scroll effect added

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
                 <nav class="header-nav">
                     <div class='nav-left'>
                         <div class="nav-left-top">
-                            <a class='nav-link' href=''>Nowe BMW iX</a>
-                            <a class='nav-link' href='#form'>Umów jazdę próbną</a>
+                            <a class='nav-link' href='#facts-section'>Nowe BMW iX</a>
+                            <a class='nav-link' href='#form-section'>Umów jazdę próbną</a>
                         </div>  
                         <div class="nav-left-bottom">
                             <h4>Radość z jazdy</h4>
@@ -68,7 +68,7 @@
                 </div>
             </header>
             <main>
-                <section class="facts-section">
+                <section class="facts-section reveal" id="facts-section">
                     <img class="bmw-info-img1" src="./images/info1.png" alt="bmw-car-front">
                     <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
                     <div class="bmw-info-box">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="innovation-section">
+                <section class="innovation-section reveal">
                     <div class="innovation-textarea">
                         <h2 class="innovation-textarea-title">
                             <span>INNOWACYJNA</span><br>
@@ -110,15 +110,15 @@
                     <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
                     <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
                 </section>
-                <section class="gallery-section">
+                <section class="gallery-section reveal">
                     <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
                 </section>
-                <section class="form-section">
+                <section class="form-section reveal" id="form-section">
                     <div class="form-container">
                         <h2>UMÓW JAZDĘ PRÓBNĄ</h2>
                         <p class="subtitle">Zachęcamy do ograniczenia poruszania się i pozostania w domu.</p>
                         <p class="subtitle">Jeśli jednak jazda testowa okaże się niezbędna prosimy o wypełnienie poniższego formularza.</p>
-                        <form id="form">
+                        <form class="form">
                             <p class="form-title">Wypełnij formularz swoimi danymi.</p>
                             <input class="input-radio" type="radio" name="pan" value="Pan">
                             <label for="html">Pan</label>
