svg files added

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                 <nav class="header-nav">
                     <div class='nav-left'>
                         <div class="nav-left-top">
-                            <a class='nav-link' href='#facts-section'>Nowe BMW iX</a>
+                            <a class='nav-link' href='#main'>Nowe BMW iX</a>
                             <a class='nav-link' href='#form-section'>Umów jazdę próbną</a>
                         </div>  
                         <div class="nav-left-bottom">
@@ -67,12 +67,13 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </header>
-            <main>
-                <section class="facts-section reveal" id="facts-section">
+            <main id="main">
+                <section class="facts-section reveal">
                     <img class="bmw-info-img1" src="./images/info1.png" alt="bmw-car-front">
                     <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
                     <div class="bmw-info-box">
                         <h2 class="bmw-info-box-title">
+                            <img class='svg-el' src="./images/pump.svg" alt="gas-pump"><br>
                             <span>FAKTY</span><br>
                             <span>O NOWYM BMW iX.</span></h2>
                         <div class="bmw-info-box-fact">
@@ -89,7 +90,7 @@
                         </div>
                         <div class="bmw-info-box-fact">
                             <p class="bmw-info-box-id">04</p>
-                            <p class="bmw-info-box-text">Ładowanie 120 km w 10 minut *</p>
+                            <p class="bmw-info-box-text">Ładowanie 120 km w 10 minut *</p>
                         </div>
                         <div class="bmw-info-box-fact">
                             <p class="bmw-info-box-id">05</p>
@@ -100,6 +101,7 @@
                 <section class="innovation-section reveal">
                     <div class="innovation-textarea">
                         <h2 class="innovation-textarea-title">
+                            <img class='svg-el' src="./images/car.svg" alt="car-grey"><br>
                             <span>INNOWACYJNA</span><br>
                             <span>AERODYNAMIKA</span><br>
                             <span>BMW iX.</span>
