header structure changed, new header images added

--- a/public/index.html
+++ b/public/index.html
@@ -39,29 +39,35 @@
                 </nav>
                 <div class="swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper-slide-left">
-                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
-                                <h1>NOWE BMW iX</h1>
-                                <h4>PIONIER NOWEJ ERY</h4>
-                            </div>
-                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                        <div class="swiper-slide" id="slide1">
+                                <div class="swiper-slide-left">
+                                    <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                    <h1>NOWE BMW iX</h1>
+                                    <h4>PIONIER NOWEJ ERY</h4>
+                                </div>
+                                <a href='#form-section'>
+                                    <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                                </a>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" id="slide2">
                             <div class="swiper-slide-left">
                                 <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
                                 <h1>NOWE BMW iX</h1>
-                                <h4>WYBRÓBUJ!</h1>
+                                <h4>WYBRÓBUJ NASZ NAJNOWSZY MODEL</h1>
                             </div>
-                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                            <a href='#form-section'>
+                                <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                            </a>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide" id="slide3">
                             <div class="swiper-slide-left">
                                 <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
                                 <h1>NOWE BMW iX</h1>
-                                <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ</h4>
+                                <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ.</h4>
                             </div>
-                            <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                            <a href='#form-section'>
+                                <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                            </a>
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
