mobile version for header created

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,21 @@
         </div>
             <header>
                 <nav class="header-nav">
+                    <button id='toggle-menu-button' class="menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+                        <svg width="50" height="50" viewBox="0 0 100 100">
+                          <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                          <path class="line line2" d="M 20,50 H 80" />
+                          <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                        </svg>
+                      </button>
+                    <div class="nav-mobile-overlay">
+                        <a class='nav-mobile-link' href='#main'>NOWE BMW iX</a>
+                        <a class='nav-mobile-link' href='#form-section'>UMÓW JAZDĘ PRÓBNĄ</a>
+                        <a class='nav-mobile-link' href='#gallery-section'>GALERIA</a>
+                        <a href='#form-section'>
+                            <button class="nav-mobile-btn">UMÓW JAZDĘ PRÓBNĄ</button>
+                        </a>
+                    </div>
                     <div class='nav-left'>
                         <div class="nav-left-top">
                             <a class='nav-link' href='#main'>Nowe BMW iX</a>
@@ -33,9 +48,7 @@
                             <h4>Radość z jazdy</h4>
                         </div>
                     </div>
-                    <div class='nav-right'>
-                        <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
-                    </div>
+                    <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
                 </nav>
                 <div class="swiper">
                     <div class="swiper-wrapper">
@@ -118,7 +131,7 @@
                     <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
                     <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
                 </section>
-                <section class="gallery-section reveal">
+                <section class="gallery-section reveal" id="gallery-section">
                     <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
                 </section>
                 <section class="form-section reveal" id="form-section">
