all sections with media queries

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
                     <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
                 </section>
                 <section class="gallery-section reveal" id="gallery-section">
-                    <img class='gallery' src="./images/gallery.png" alt="gallery-of-bmw-pictures">
+                    <div class="gallery-imgs"></div>
                 </section>
                 <section class="form-section reveal" id="form-section">
                     <div class="form-container">
